--- a/app/src/main/res/layout/fragment_sql_add.xml
+++ b/app/src/main/res/layout/fragment_sql_add.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fragments.room.AddRoomFragment">
+    tools:context="SQL.AddSQLFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edit_mark"
